--- a/.i3/config.d/scatty.conf
+++ b/.i3/config.d/scatty.conf
@@ -1,3 +1,10 @@
+bar {
+#	output LVDS1
+	position top
+	font pango:DejaVu Sans Mono, Icons 6
+	status_command python /home/bjoern/.i3/bar_lvds1.py
+}
+
 # Set a background image
 exec feh --bg-scale /home/bjoern/.i3/poor_pluto_1440x900.jpg
 
