Add config for kjp-monster

--- a/.i3/Makefile
+++ b/.i3/Makefile
@@ -1,4 +1,4 @@
 dir=config.d
 
-config: i3_create_config.sh ${dir}/base.conf ${dir}/keybindings.conf ${dir}/statusbar.conf ${dir}/scatty.conf ${dir}/stuff.conf
-	./i3_create_config.sh
+config: i3_create_config.sh ${dir}/base.conf ${dir}/keybindings.conf ${dir}/scatty.conf ${dir}/kjp-monster.conf ${dir}/stuff.conf
+	bash ./i3_create_config.sh
